# k-mer

./: CMakeLists.txt  LICENSE  README.md
include/: Algorithm.hpp  Application.hpp  Kmer.hpp  Kmer_Utility.hpp  Program_Params.hpp
src/: CMakeLists.txt  main.cpp
